2006-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix one AS_HELP_STRING.

2006-08-08  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/epiphany.defs:
	* src/ephy-notebook.h:
	* src/ephy-notebook.c:
	* src/epiphany.override:

	Expose notebook->priv->focused_pages to extensions. Fix bug #350187.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Post-release version bump.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.5.91 ===

	* configure.ac:

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Don't allow closing the window if quit is locked down.
	Patch by Diego Escalante Urrelo, bug #320091.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	* src/ephy-history-window.c:
	
	Avoid accels on thin characters. Patch by 
	Crispin Flowerday, bug #331777.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	* src/window-commands.c:
	* src/window-commands.h:
	
	Add "delete text" command.
	
2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Also recognise keypad keys for navigation. Bug #337089.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	
	Fix the build.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c:
	
	Correctly mark mouse click events as consumed.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	
	Improve the a11y theme check.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* lib/Makefile.am:
	
	Use variables here, not configure substitutions.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-notifiers.cpp:
	
	Simply CallGetService to get the pref branch.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	Use AutoJSContextStack on window open.
	Disable XPrint.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
